--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
         "discord.js": "^14.16.3",
         "express": "^4.18.2",
         "express-validator": "^7.0.1",
-        "firebase-admin": "^12.6.0",
         "jsonwebtoken": "^9.0.1",
         "module-alias": "^2.2.3",
         "mongodb": "^6.9.0",
@@ -52,6 +51,7 @@
         "@types/jest": "^29.5.13",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/module-alias": "^2.0.4",
+        "@types/mongodb": "^4.0.6",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.4.2",
         "@types/nodemailer": "^6.4.8",
