--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/dev.js\"",
         "doc": "npx typedoc --entryPointStrategy expand ./src",
         "seed": "npx tsc && node ./dist/db/seeds/index.js",
-        "start": "node .",
+        "start": "node dist/index.js",
         "test": "cross-env NODE_ENV=test BACK_MONGODB_NAME=testDb jest  --setupFiles dotenv/config --no-cache   --detectOpenHandles --forceExit",
         "lint": "eslint . --ext .ts",
         "lint:fix": "eslint . --ext .ts --fix",
